--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,6 +31,7 @@
       <a class="sidebar-nav-item" href="https://github.com/tristanlukens"
         >GitHub</a
       >
+      <a class="sidebar-nav-item" href="/atom.xml">Atom feed</a>
       <span class="sidebar-nav-item">Days since I last bit my nails: 0</span>
     </nav>
 
