--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}"> {{ site.name }} </a>
+        <a href="{{ site.baseurl }}/"> {{ site.name }} </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
@@ -10,7 +10,7 @@
     <nav class="sidebar-nav">
       <a
         class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}"
-        href="{{ site.baseurl }}"
+        href="{{ site.baseurl }}/"
         >Home</a
       >
 
@@ -20,7 +20,7 @@
       pages_list %} {% if node.title != null %} {% if node.layout == "page" %}
       <a
         class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
-        href="{{ node.url }}"
+        href="{{ node.url }}/"
         >{{ node.title }}</a
       >
       {% endif %} {% endif %} {% endfor %}
