--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 </div>
 
 <div class="related">
-  <h2>Recent posts</h2>
+  <h2>Latest posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
     <li>
