--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,22 +5,22 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date"
-    >{{ page.date | date: "%B %e, %Y" }} {% if page.lang != empty %}&middot; {{
-    page.lang }} {% endif %}</span
+    >{{ page.date | localize: "%e %B %Y" }} {% if page.lang != empty %}&middot;
+    {{ page.lang }} {% endif %}</span
   >
 
   <div>{{ content }}</div>
 </div>
 
 <div class="related">
-  <h2>Latest posts</h2>
+  <h2>Laatste posts en covers</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
     <li>
       <h3>
         <a href="{{ post.url }}">
           {{ post.title }}
-          <small>{{ post.date | date: "%B %e, %Y" }}</small>
+          <small>{{ page.date | localize: "%e %B %Y" }}</small>
         </a>
       </h3>
     </li>
