--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,9 +25,8 @@
 
   <!-- Icons -->
   <link
-    rel="apple-touch-icon-precomposed"
-    sizes="144x144"
-    href="{{ site.baseurl }}/public/apple-touch-icon-144-precomposed.png"
+    rel="apple-touch-icon"
+    href="{{ site.baseurl }}/public/apple-touch-icon.png"
   />
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico" />
 
