Mention Hyde and Jekyll in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,5 +35,9 @@
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }} Tristan Lukens</p>
+    <small>
+      {{ "Deze site gebruikt [Hyde](https://hyde.getpoole.com), een thema voor
+      [Jekyll](https://jekyllrb.com)" | markdownify }}
+    </small>
   </div>
 </div>
